# skia-canvas

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  publish.js  upload.ts
.github/workflows/: arch.yml  build.yml  build_linux.yml  build_mac.yml  build_mp.yml  build_win.yml  containers.yml  lambda.yml  publish.yml  release.yml  test.yml
arch/arm/: Dockerfile
arch/arm64/: Dockerfile
arch/glibc/: Dockerfile  install-llvm.sh
arch/lambda/: build-layer.sh
arch/musl/: Dockerfile  alpine-build.patch
containers/: Dockerfile.glibc  Dockerfile.musl  freetype.cfg  install-fontlibs.sh  install-llvm.sh  sources.list-buster  static-deps.patch  use-static-fontconfig.patch
docs/: getting-started.md  index.md  intro.md
docs/api/: app.md  canvas.md  context.md  font-library.md  image.md  imagedata.md  index.md  path2d.md  utilities.md  window.md
lib/: browser.js  classes.js  colors.js  css.js  esm.mjs  fetch.js  geometry-polyfill.js  geometry.js  index.d.ts  index.js  index.mjs  io.js  parse.js  prebuild.mjs  stub.js  text.js  typography.js  urls.js  utils.js
lib/classes/: canvas.js  context.js  css.js  geometry.js  gui.js  imagery.js  index.mjs  neon.js  path.js  path2d.js  typography.js
lib/fonts/: fonts.conf
native/: Cargo.toml
native/src/: canvas.rs  context.rs  context2d.rs  gradient.rs  image.rs  lib.rs  path.rs  path2d.rs  pattern.rs  typography.rs  utils.rs
native/src/context/: class.rs  mod.rs
src/: canvas.rs  filter.rs  font_library.rs  gradient.rs  image.rs  init_gpu.rs  lib.rs  path.rs  pattern.rs  texture.rs  typography.rs  utils.rs
src/context/: api.rs  mod.rs  page.rs
src/gpu/: gl.rs  metal.rs  mod.rs  vulkan.rs
src/gpu/vulkan/: engine.rs  mod.rs  renderer.rs
src/gui/: app.rs  event.rs  mod.rs  pump.rs  window.rs  window_mgr.rs
test/: canvas.test.js  context2d.test.js  media.test.js  path2d.test.js
test/assets/: pentagon.raw
test/runner/: index.d.ts  index.js
test/visual/: index.html  index.js  tests.js
tests/assets/Raleway/: README.txt
tests/assets/image/: format.raw
tests/suite/: canvas.test.js  context2d.test.js  media.test.js  path2d.test.js
tests/visual/: index.html  index.js  tests.js
