[package]
name = "skia-canvas"
version = "1.0.1"
description = "A canvas environment for Node"
authors = ["Christian Swinehart <drafting@samizdat.co>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[features]
metal = ["skia-safe/metal", "dep:metal", "dep:raw-window-handle", "dep:core-graphics-types", "dep:foreign-types-shared", "dep:cocoa", "dep:objc"]
vulkan = ["skia-safe/vulkan", "winit/rwh_05", "dep:ash", "dep:vulkano"]
window = ["dep:winit"]

[dependencies]
crc = "^3.0"
css-color = "^0.2"
rayon = "^1.5"
crossbeam = "0.8.2"
once_cell = "1.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skia-safe = { version = "0.78.2", features = ["textlayout", "webp", "svg"] }
allsorts = { version = "0.15", features = ["flate2_zlib"], default-features = false}

# vulkan
ash = { version = "0.37.3", optional = true }
vulkano = { version = "0.34.1", optional = true }

# metal
metal = { version = "0.29", optional = true }
raw-window-handle = { version = "0.6", optional = true }
core-graphics-types = { version = "0.1.1", optional = true }
foreign-types-shared = { version = "0.1.1", optional = true }
cocoa = { version = "0.26.0", optional = true }
objc = { version = "0.2.7", optional = true }

# window
winit = { version = '0.30.5', features = ["serde"], optional = true }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "task-api"]
