[package]
name = "skia-canvas"
version = "0.1.0"
authors = ["Christian Swinehart <drafting@samizdat.co>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "skia_canvas"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.1"

[dependencies]
neon = "0.8.1"
css-color = "0.1.1"
skia-safe = {version = "0.39.1", features = ["textlayout"]}
# usvg = "0.11.0"
